wp-content/themes/impruwclientparent/css/less/builder.less
/* ... */
/**** Pace Loader Styles ****/
.pace-min-theme {
	.pace {
		background: transparent;
		position: fixed;
		z-index: 2000;
		top: 0;
		left: 0;
		bottom: auto;
		width: 100%;
		height: 2px;
		border: 0;
		-webkit-transition: width 1s;
		-moz-transition: width 1s;
		-o-transition: width 1s;
		transition: width 1s;
		.pace-progress {
			max-width: initial;
		}
	}
}

/****Dropdown Menu Styles****/
.dropdown-menu {
	border-radius: 0;
	background: #fff;
	box-shadow: 1px 1px 3px 1px @dash-grey;
	display: none;
	li {
		border-bottom: 1px solid lighten(@dash-grey, 30%);
		a {
			border-radius: 0 !important;
			.text {
				color: @dash-grey;
			}
			&:hover {
				background: @blue-grey;
				color: #fff;
				.text {
					color: #fff;
				}
			}
		}
		&.selected {
			a {
				background: @orange;
				.text {
					color: #fff;
				}
				&:hover {
					background: @blue-grey;
				}
				&:focus {
					background: @orange;
				}
			}
		}
		&:last-child {
			border-bottom: 0;
		}
	}
}

/**** Select Styles ****/
.bootstrap-select {
	.dropdown-toggle {
		border-radius: 2px !important;
	}
}

/****Builder Drag and Drop Menu****/
.aj-imp-drag-menu {
	width: 180px;
	padding: 0.5em;
	background: @dark-blue;
	z-index: 10;
	border-radius: 0 0 2px 0;
	.handle {
		background: @dark-blue;
        padding: 0.6em 0.5em 0.5em;
        color: @dash-grey;
        font-size: 1.5em;
        border-radius: 0 2px 2px 0;
        cursor: pointer;
        &:hover {
        	color: @orange;
        }
	}
	.desc {
		font-size: 0.88em;
		line-height: 1.3em;
		color: @dash-grey;
		padding: 0 3.5%;
		cursor: move;
	}
	.aj-imp-add-row {
		padding: 5px 3.5%;
		list-style: none;
		font-size: 0.88em;
		a {
			display: block;
			color: #fff;
			text-transform: uppercase;
			padding: 0.75em;
			box-shadow: inset 0 0 1px #000;
			background: rgba(0, 0, 0, 0.5);
			border-radius: 2px;
			cursor: move;
			.glyphicon-align-justify {
				margin-right: 10px;
			}
			.glyphicon-fullscreen {
				color: @dash-grey;
			}
			&:hover, &:focus {
				background: @orange;
				transition-duration: 0.6s;
				.glyphicon {
					color: #fff;
				}
			}
			
		}
	}
	.nav-tabs {
		border: 0;
		text-align: center;
		li {
			display: inline-block;
			float: none;
			width: 30%;
			a {
				border-radius: 0;
				color: @dash-grey;
				border: 0;
				border-bottom: 2px solid @dash-grey;
				text-transform: uppercase;
				font-weight: 300;
				font-size: 0.66em;
				padding: 7px 2px;
			}
			&.active, &:hover {
				a {
					background: transparent;
					border: 0;
					border-bottom: 2px solid @orange;
					color: #fff;
				}
			}
		}
	}
	.tab-content {
		border: 0;
		border-radius: 0;
		color: #fff;
		font-weight: 400;
		font-size: 0.7em;
		padding: 0.5em 0.5em 0;
		.aj-imp-builder-items {
			margin: 0;
			list-style: none;
			padding: 0;
			li {
				display: block;
				float: left;
				width: 47%;
				margin: 1.5%;
				border-radius: 2px;
				box-shadow: inset 0 0 1px #000;
				a {
					display: block;
					text-align: center;
					color: @dash-grey;
					text-transform: uppercase;
					cursor: move;
					min-height: 50px;
                    background: rgba(0, 0, 0, 1);
					.aj-imp-builder-icon {
						font-size: 2.2em;
						padding: 0.5em 0 0;
						color: #fff;
					}
					.aj-imp-builder-title {	
						padding: 0.5em;
						height: 40px;
						overflow: hidden;
					}
				}
				&:hover, &:focus, &.selected-element {
					background: @orange;
					transition-duration: 0.6s;
					a {
						color: #fff;
						background: rgba(0, 0, 0, 0);
					}
				}
				&.selected-element {
					position: relative;
					overflow: hidden;
					.element-help {
						background: @dark-blue;
						color: @dash-grey;
						text-transform: capitalize;
						position: absolute;
						border-radius: 2px;
						border: 1px solid @dash-grey;
						padding: 0.5em;
						font-size: 1.15em;
						width: 140px;
						top: 80px;
						display: block !important;
						z-index: 1;
						&:after {
							content: '';
							position: absolute;
							top: -13px;
							left: 10px;
							width: 0;
							height: 0;
							border: 7px solid transparent;
							border-bottom: 6px solid @dark-blue;
						}
						&:before {
							content: '';
							position: absolute;
							top: -14px;
							left: 10px;
							width: 0;
							height: 0;
							border: 7px solid transparent;
							border-bottom: 6px solid @dash-grey;
						}
					}
				}
				&.ui-draggable-dragging {
					background: transparent;
					box-shadow: none;
					a {
						background: rgba(0, 0, 0, 0.8);
					}
				}
			}
		}
	}
	&.open {
		.selected-element {
			overflow: visible !important;
		}
	}
}

.element-helper {
	max-width: 220px;
	max-height: 50px;
	border: 1px solid darken(@orange, 20%);
	background: @orange;
	border-radius: 3px;
}

/****Placeholder Styles****/
.element-markup {
	.placeholder {
		opacity: 0.6;
	}
}
/* ... */

